Documenting api responses and altering definitions
